--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.11.0",
     "react-social-icons": "^5.15.0",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0"
   },
